/*

enum con los estados del pedido asociada a Pedido

 */
package com.lab1.laboratorio5;

/**
 *
 * @author diego
 */
 enum EstadoPedido{EN_PREPARACION , EN_ENVIO , ENTREGADO }
